# LTC2943

./: CMakeLists.txt  LTC2943.cpp  LTC2943.hpp  LTC2943_registers.hpp  Makefile  README.md  build_and_run_LTC2943Tests.sh  i2c.hpp  main.cpp
I2C/: CMakeLists.txt  i2c.cpp
tests/: CMakeLists.txt  LTC2943Tests.cpp
